--- a/projectFinal.ipynb
+++ b/projectFinal.ipynb
@@ -1123,12 +1123,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Statistical Analysis - Linear Regression"
+    "# Statistical Analysis - Linear Regression"
    ]
   },
   {
